--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,13 @@
 {
-  "name": "raiym/instagram-php-scraper",
+  "name": "otterspy/instagram-php-scraper",
   "description": "Instagram PHP Scraper. Get account information, photos and videos without any authorization",
-  "keywords": [
-    "instagram",
-    "scraper"
-  ],
   "type": "library",
-  "homepage": "https://github.com/raiym/instagram-php-scraper",
+  "homepage": "https://github.com/OtterSpyProject/instagram-php-scraper",
   "license": "MIT",
   "authors": [
     {
-      "name": "raiym",
-      "email": "r.kapishev@gmail.com"
+      "name": "otterspy team",
+      "email": "korets.web@gmail.com"
     }
   ],
   "require": {
@@ -38,6 +34,6 @@
     }
   },
   "support": {
-    "email": "r.kapishev@gmail.com"
+    "email": "korets.web@gmail.com"
   }
 }
